build/parser.output
Terminais não utilizados na gramática

   TOKEN_ERRO


Estado 62 conflitos: 1 de deslocamento/redução
Estado 114 conflitos: 1 de deslocamento/redução
Estado 121 conflitos: 4 de redução/redução
Estado 179 conflitos: 1 de deslocamento/redução
Estado 182 conflitos: 4 de redução/redução


Gramática

    0 $accept: programa $end

    1 programa: declaracao_global programa
    2         | declarar_funcao programa
    3         | %empty

    4 declaracao_global: especificador_tipo TK_IDENTIFICADOR ';'
    5                  | especificador_tipo TK_IDENTIFICADOR '[' valor ']' ';'
    6                  | qualificador_tipo especificador_tipo TK_IDENTIFICADOR ';'
    7                  | especificador_classe_armazenamento especificador_tipo TK_IDENTIFICADOR ';'
    8                  | especificador_classe_armazenamento especificador_tipo TK_IDENTIFICADOR '[' valor ']' ';'
    9                  | especificador_classe_armazenamento qualificador_tipo especificador_tipo TK_IDENTIFICADOR ';'

   10 literal: TK_LIT_INT
   11        | TK_LIT_FLOAT
   12        | TK_LIT_FALSE
   13        | TK_LIT_TRUE
   14        | TK_LIT_CHAR
   15        | TK_LIT_STRING

   16 especificador_tipo: TK_PR_INT
   17                   | TK_PR_FLOAT
   18                   | TK_PR_BOOL
   19                   | TK_PR_CHAR
   20                   | TK_PR_STRING

   21 declaracao_local: especificador_tipo TK_IDENTIFICADOR
   22                 | especificador_classe_armazenamento especificador_tipo TK_IDENTIFICADOR
   23                 | especificador_tipo TK_IDENTIFICADOR '[' valor ']'
   24                 | especificador_classe_armazenamento especificador_tipo TK_IDENTIFICADOR '[' valor ']'
   25                 | especificador_tipo TK_IDENTIFICADOR TK_OC_LE valor
   26                 | especificador_classe_armazenamento especificador_tipo TK_IDENTIFICADOR TK_OC_LE valor
   27                 | especificador_classe_armazenamento qualificador_tipo especificador_tipo TK_IDENTIFICADOR TK_OC_LE valor
   28                 | qualificador_tipo especificador_tipo TK_IDENTIFICADOR TK_OC_LE valor

   29 valor: literal
   30      | TK_IDENTIFICADOR
   31      | TK_IDENTIFICADOR '[' expressao ']'

   32 atribuicao: TK_IDENTIFICADOR '=' expressao
   33           | TK_IDENTIFICADOR '[' expressao ']' '=' expressao
   34           | TK_IDENTIFICADOR '[' expressao ']' '=' valor

   35 retorno: TK_PR_RETURN valor
   36        | TK_PR_RETURN expressao
   37        | TK_PR_RETURN

   38 especificador_classe_armazenamento: TK_PR_STATIC

   39 qualificador_tipo: TK_PR_CONST

   40 bloco_comando: comando ';' bloco_comando
   41              | comando
   42              | %empty

   43 bloco_interno: comando ';' bloco_interno
   44              | comando
   45              | %empty

   46 comando: retorno
   47        | atribuicao
   48        | declaracao_local
   49        | controle_fluxo
   50        | execucao_iteracao
   51        | '{' bloco_interno '}'
   52        | entrada
   53        | chamada_funcao
   54        | saida
   55        | ';'

   56 parametros_vazio: parametros
   57                 | %empty

   58 parametros: lista_parametros ',' parametros
   59           | lista_parametros

   60 lista_parametros: especificador_tipo TK_IDENTIFICADOR
   61                 | qualificador_tipo especificador_tipo TK_IDENTIFICADOR
   62                 | valor

   63 entrada: TK_PR_INPUT expressao "=>" expressao

   64 saida: TK_PR_OUTPUT lista_expressoes

   65 lista_vazia: lista_expressoes
   66            | %empty

   67 lista_expressoes: expressao ',' lista_expressoes
   68                 | expressao

   69 controle_fluxo: TK_PR_IF '(' expressao ')' TK_PR_THEN comando
   70               | TK_PR_IF '(' expressao ')' TK_PR_THEN comando TK_PR_ELSE comando

   71 execucao_iteracao: TK_PR_WHILE '(' expressao ')' TK_PR_DO comando
   72                  | TK_PR_DO comando TK_PR_WHILE '(' expressao ')'

   73 declarar_funcao: especificador_tipo TK_IDENTIFICADOR '(' parametros_vazio ')' '{' bloco_comando '}'
   74                | especificador_classe_armazenamento especificador_tipo TK_IDENTIFICADOR '(' parametros_vazio ')' '{' bloco_comando '}'

   75 entrada_funcao: '(' expressao ')'
   76               | '(' ')'

   77 chamada_funcao: TK_IDENTIFICADOR entrada_funcao

   78 operador_aritmetico: '+'
   79                    | '-'
   80                    | '*'
   81                    | '/'
   82                    | '%'

   83 operador_logico: TK_OC_LE
   84                | TK_OC_GE
   85                | TK_OC_EQ
   86                | TK_OC_NE
   87                | TK_OC_AND
   88                | TK_OC_OR
   89                | '<'
   90                | '>'

   91 expressao: operador_logico expressao
   92          | valor expressao
   93          | operador_aritmetico expressao
   94          | '(' expressao ')'
   95          | expressao_de_funcao
   96          | valor

   97 expressao_de_funcao: TK_IDENTIFICADOR '(' lista_vazia ')' lista_vazia


Terminais, com as regras onde eles aparecem

$end (0) 0
'%' (37) 82
'(' (40) 69 70 71 72 73 74 75 76 94 97
')' (41) 69 70 71 72 73 74 75 76 94 97
'*' (42) 80
'+' (43) 78
',' (44) 58 67
'-' (45) 79
'/' (47) 81
';' (59) 4 5 6 7 8 9 40 43 55
'<' (60) 89
'=' (61) 32 33 34
'>' (62) 90
'[' (91) 5 8 23 24 31 33 34
']' (93) 5 8 23 24 31 33 34
'{' (123) 51 73 74
'}' (125) 51 73 74
error (256)
TK_PR_INT (258) 16
TK_PR_FLOAT (259) 17
TK_PR_BOOL (260) 18
TK_PR_CHAR (261) 19
TK_PR_STRING (262) 20
TK_PR_IF (263) 69 70
TK_PR_THEN (264) 69 70
TK_PR_ELSE (265) 70
TK_PR_WHILE (266) 71 72
TK_PR_DO (267) 71 72
TK_PR_INPUT (268) 63
TK_PR_OUTPUT (269) 64
TK_PR_RETURN (270) 35 36 37
TK_PR_STATIC (271) 38
TK_PR_CONST (272) 39
TK_OC_LE (273) 25 26 27 28 83
TK_OC_GE (274) 84
TK_OC_EQ (275) 85
TK_OC_NE (276) 86
TK_OC_AND (277) 87
TK_OC_OR (278) 88
TK_LIT_INT (279) 10
TK_LIT_FLOAT (280) 11
TK_LIT_FALSE (281) 12
TK_LIT_TRUE (282) 13
TK_LIT_CHAR (283) 14
TK_LIT_STRING (284) 15
TK_IDENTIFICADOR (285) 4 5 6 7 8 9 21 22 23 24 25 26 27 28 30 31 32
    33 34 60 61 73 74 77 97
TOKEN_ERRO (286)
"=>" (287) 63


Não-terminais com as regras onde eles aparecem

$accept (49)
    à esquerda: 0
programa (50)
    à esquerda: 1 2 3, à direita: 0 1 2
declaracao_global (51)
    à esquerda: 4 5 6 7 8 9, à direita: 1
literal (52)
    à esquerda: 10 11 12 13 14 15, à direita: 29
especificador_tipo (53)
    à esquerda: 16 17 18 19 20, à direita: 4 5 6 7 8 9 21 22 23 24
    25 26 27 28 60 61 73 74
declaracao_local (54)
    à esquerda: 21 22 23 24 25 26 27 28, à direita: 48
valor (55)
    à esquerda: 29 30 31, à direita: 5 8 23 24 25 26 27 28 34 35
    62 92 96
atribuicao (56)
    à esquerda: 32 33 34, à direita: 47
retorno (57)
    à esquerda: 35 36 37, à direita: 46
especificador_classe_armazenamento (58)
    à esquerda: 38, à direita: 7 8 9 22 24 26 27 74
qualificador_tipo (59)
    à esquerda: 39, à direita: 6 9 27 28 61
bloco_comando (60)
    à esquerda: 40 41 42, à direita: 40 73 74
bloco_interno (61)
    à esquerda: 43 44 45, à direita: 43 51
comando (62)
    à esquerda: 46 47 48 49 50 51 52 53 54 55, à direita: 40 41 43
    44 69 70 71 72
parametros_vazio (63)
    à esquerda: 56 57, à direita: 73 74
parametros (64)
    à esquerda: 58 59, à direita: 56 58
lista_parametros (65)
    à esquerda: 60 61 62, à direita: 58 59
entrada (66)
    à esquerda: 63, à direita: 52
saida (67)
    à esquerda: 64, à direita: 54
lista_vazia (68)
    à esquerda: 65 66, à direita: 97
lista_expressoes (69)
    à esquerda: 67 68, à direita: 64 65 67
controle_fluxo (70)
    à esquerda: 69 70, à direita: 49
execucao_iteracao (71)
    à esquerda: 71 72, à direita: 50
declarar_funcao (72)
    à esquerda: 73 74, à direita: 2
entrada_funcao (73)
    à esquerda: 75 76, à direita: 77
chamada_funcao (74)
    à esquerda: 77, à direita: 53
operador_aritmetico (75)
    à esquerda: 78 79 80 81 82, à direita: 93
operador_logico (76)
    à esquerda: 83 84 85 86 87 88 89 90, à direita: 91
expressao (77)
    à esquerda: 91 92 93 94 95 96, à direita: 31 32 33 34 36 63 67
    68 69 70 71 72 75 91 92 93 94
expressao_de_funcao (78)
    à esquerda: 97, à direita: 95


State 0

    0 $accept: . programa $end

    TK_PR_INT     deslocar, e ir ao estado 1
    TK_PR_FLOAT   deslocar, e ir ao estado 2
    TK_PR_BOOL    deslocar, e ir ao estado 3
    TK_PR_CHAR    deslocar, e ir ao estado 4
    TK_PR_STRING  deslocar, e ir ao estado 5
    TK_PR_STATIC  deslocar, e ir ao estado 6
    TK_PR_CONST   deslocar, e ir ao estado 7

    $padrão  reduzir usando a regra 3 (programa)

    programa                            ir ao estado 8
    declaracao_global                   ir ao estado 9
    especificador_tipo                  ir ao estado 10
    especificador_classe_armazenamento  ir ao estado 11
    qualificador_tipo                   ir ao estado 12
    declarar_funcao                     ir ao estado 13


State 1

   16 especificador_tipo: TK_PR_INT .

    $padrão  reduzir usando a regra 16 (especificador_tipo)


State 2

   17 especificador_tipo: TK_PR_FLOAT .

    $padrão  reduzir usando a regra 17 (especificador_tipo)


State 3

   18 especificador_tipo: TK_PR_BOOL .

    $padrão  reduzir usando a regra 18 (especificador_tipo)


State 4

   19 especificador_tipo: TK_PR_CHAR .

    $padrão  reduzir usando a regra 19 (especificador_tipo)


State 5

   20 especificador_tipo: TK_PR_STRING .

    $padrão  reduzir usando a regra 20 (especificador_tipo)


State 6

   38 especificador_classe_armazenamento: TK_PR_STATIC .

    $padrão  reduzir usando a regra 38 (especificador_classe_armazenamento)


State 7

   39 qualificador_tipo: TK_PR_CONST .

    $padrão  reduzir usando a regra 39 (qualificador_tipo)


State 8

    0 $accept: programa . $end

    $end  deslocar, e ir ao estado 14


State 9

    1 programa: declaracao_global . programa

    TK_PR_INT     deslocar, e ir ao estado 1
    TK_PR_FLOAT   deslocar, e ir ao estado 2
    TK_PR_BOOL    deslocar, e ir ao estado 3
    TK_PR_CHAR    deslocar, e ir ao estado 4
    TK_PR_STRING  deslocar, e ir ao estado 5
    TK_PR_STATIC  deslocar, e ir ao estado 6
    TK_PR_CONST   deslocar, e ir ao estado 7

    $padrão  reduzir usando a regra 3 (programa)

    programa                            ir ao estado 15
    declaracao_global                   ir ao estado 9
    especificador_tipo                  ir ao estado 10
    especificador_classe_armazenamento  ir ao estado 11
    qualificador_tipo                   ir ao estado 12
    declarar_funcao                     ir ao estado 13


State 10

    4 declaracao_global: especificador_tipo . TK_IDENTIFICADOR ';'
    5                  | especificador_tipo . TK_IDENTIFICADOR '[' valor ']' ';'
   73 declarar_funcao: especificador_tipo . TK_IDENTIFICADOR '(' parametros_vazio ')' '{' bloco_comando '}'

    TK_IDENTIFICADOR  deslocar, e ir ao estado 16


State 11

    7 declaracao_global: especificador_classe_armazenamento . especificador_tipo TK_IDENTIFICADOR ';'
    8                  | especificador_classe_armazenamento . especificador_tipo TK_IDENTIFICADOR '[' valor ']' ';'
    9                  | especificador_classe_armazenamento . qualificador_tipo especificador_tipo TK_IDENTIFICADOR ';'
   74 declarar_funcao: especificador_classe_armazenamento . especificador_tipo TK_IDENTIFICADOR '(' parametros_vazio ')' '{' bloco_comando '}'

    TK_PR_INT     deslocar, e ir ao estado 1
    TK_PR_FLOAT   deslocar, e ir ao estado 2
    TK_PR_BOOL    deslocar, e ir ao estado 3
    TK_PR_CHAR    deslocar, e ir ao estado 4
    TK_PR_STRING  deslocar, e ir ao estado 5
    TK_PR_CONST   deslocar, e ir ao estado 7

    especificador_tipo  ir ao estado 17
    qualificador_tipo   ir ao estado 18


State 12

    6 declaracao_global: qualificador_tipo . especificador_tipo TK_IDENTIFICADOR ';'

    TK_PR_INT     deslocar, e ir ao estado 1
    TK_PR_FLOAT   deslocar, e ir ao estado 2
    TK_PR_BOOL    deslocar, e ir ao estado 3
    TK_PR_CHAR    deslocar, e ir ao estado 4
    TK_PR_STRING  deslocar, e ir ao estado 5

    especificador_tipo  ir ao estado 19


State 13

    2 programa: declarar_funcao . programa

    TK_PR_INT     deslocar, e ir ao estado 1
    TK_PR_FLOAT   deslocar, e ir ao estado 2
    TK_PR_BOOL    deslocar, e ir ao estado 3
    TK_PR_CHAR    deslocar, e ir ao estado 4
    TK_PR_STRING  deslocar, e ir ao estado 5
    TK_PR_STATIC  deslocar, e ir ao estado 6
    TK_PR_CONST   deslocar, e ir ao estado 7

    $padrão  reduzir usando a regra 3 (programa)

    programa                            ir ao estado 20
    declaracao_global                   ir ao estado 9
    especificador_tipo                  ir ao estado 10
    especificador_classe_armazenamento  ir ao estado 11
    qualificador_tipo                   ir ao estado 12
    declarar_funcao                     ir ao estado 13


State 14

    0 $accept: programa $end .

    $padrão  aceitar


State 15

    1 programa: declaracao_global programa .

    $padrão  reduzir usando a regra 1 (programa)


State 16

    4 declaracao_global: especificador_tipo TK_IDENTIFICADOR . ';'
    5                  | especificador_tipo TK_IDENTIFICADOR . '[' valor ']' ';'
   73 declarar_funcao: especificador_tipo TK_IDENTIFICADOR . '(' parametros_vazio ')' '{' bloco_comando '}'

    ';'  deslocar, e ir ao estado 21
    '['  deslocar, e ir ao estado 22
    '('  deslocar, e ir ao estado 23


State 17

    7 declaracao_global: especificador_classe_armazenamento especificador_tipo . TK_IDENTIFICADOR ';'
    8                  | especificador_classe_armazenamento especificador_tipo . TK_IDENTIFICADOR '[' valor ']' ';'
   74 declarar_funcao: especificador_classe_armazenamento especificador_tipo . TK_IDENTIFICADOR '(' parametros_vazio ')' '{' bloco_comando '}'

    TK_IDENTIFICADOR  deslocar, e ir ao estado 24


State 18

    9 declaracao_global: especificador_classe_armazenamento qualificador_tipo . especificador_tipo TK_IDENTIFICADOR ';'

    TK_PR_INT     deslocar, e ir ao estado 1
    TK_PR_FLOAT   deslocar, e ir ao estado 2
    TK_PR_BOOL    deslocar, e ir ao estado 3
    TK_PR_CHAR    deslocar, e ir ao estado 4
    TK_PR_STRING  deslocar, e ir ao estado 5

    especificador_tipo  ir ao estado 25


State 19

    6 declaracao_global: qualificador_tipo especificador_tipo . TK_IDENTIFICADOR ';'

    TK_IDENTIFICADOR  deslocar, e ir ao estado 26


State 20

    2 programa: declarar_funcao programa .

    $padrão  reduzir usando a regra 2 (programa)


State 21

    4 declaracao_global: especificador_tipo TK_IDENTIFICADOR ';' .

    $padrão  reduzir usando a regra 4 (declaracao_global)


State 22

    5 declaracao_global: especificador_tipo TK_IDENTIFICADOR '[' . valor ']' ';'

    TK_LIT_INT        deslocar, e ir ao estado 27
    TK_LIT_FLOAT      deslocar, e ir ao estado 28
    TK_LIT_FALSE      deslocar, e ir ao estado 29
    TK_LIT_TRUE       deslocar, e ir ao estado 30
    TK_LIT_CHAR       deslocar, e ir ao estado 31
    TK_LIT_STRING     deslocar, e ir ao estado 32
    TK_IDENTIFICADOR  deslocar, e ir ao estado 33

    literal  ir ao estado 34
    valor    ir ao estado 35


State 23

   73 declarar_funcao: especificador_tipo TK_IDENTIFICADOR '(' . parametros_vazio ')' '{' bloco_comando '}'

    TK_PR_INT         deslocar, e ir ao estado 1
    TK_PR_FLOAT       deslocar, e ir ao estado 2
    TK_PR_BOOL        deslocar, e ir ao estado 3
    TK_PR_CHAR        deslocar, e ir ao estado 4
    TK_PR_STRING      deslocar, e ir ao estado 5
    TK_PR_CONST       deslocar, e ir ao estado 7
    TK_LIT_INT        deslocar, e ir ao estado 27
    TK_LIT_FLOAT      deslocar, e ir ao estado 28
    TK_LIT_FALSE      deslocar, e ir ao estado 29
    TK_LIT_TRUE       deslocar, e ir ao estado 30
    TK_LIT_CHAR       deslocar, e ir ao estado 31
    TK_LIT_STRING     deslocar, e ir ao estado 32
    TK_IDENTIFICADOR  deslocar, e ir ao estado 33

    $padrão  reduzir usando a regra 57 (parametros_vazio)

    literal             ir ao estado 34
    especificador_tipo  ir ao estado 36
    valor               ir ao estado 37
    qualificador_tipo   ir ao estado 38
    parametros_vazio    ir ao estado 39
    parametros          ir ao estado 40
    lista_parametros    ir ao estado 41


State 24

    7 declaracao_global: especificador_classe_armazenamento especificador_tipo TK_IDENTIFICADOR . ';'
    8                  | especificador_classe_armazenamento especificador_tipo TK_IDENTIFICADOR . '[' valor ']' ';'
   74 declarar_funcao: especificador_classe_armazenamento especificador_tipo TK_IDENTIFICADOR . '(' parametros_vazio ')' '{' bloco_comando '}'

    ';'  deslocar, e ir ao estado 42
    '['  deslocar, e ir ao estado 43
    '('  deslocar, e ir ao estado 44


State 25

    9 declaracao_global: especificador_classe_armazenamento qualificador_tipo especificador_tipo . TK_IDENTIFICADOR ';'

    TK_IDENTIFICADOR  deslocar, e ir ao estado 45


State 26

    6 declaracao_global: qualificador_tipo especificador_tipo TK_IDENTIFICADOR . ';'

    ';'  deslocar, e ir ao estado 46


State 27

   10 literal: TK_LIT_INT .

    $padrão  reduzir usando a regra 10 (literal)


State 28

   11 literal: TK_LIT_FLOAT .

    $padrão  reduzir usando a regra 11 (literal)


State 29

   12 literal: TK_LIT_FALSE .

    $padrão  reduzir usando a regra 12 (literal)


State 30

   13 literal: TK_LIT_TRUE .

    $padrão  reduzir usando a regra 13 (literal)


State 31

   14 literal: TK_LIT_CHAR .

    $padrão  reduzir usando a regra 14 (literal)


State 32

   15 literal: TK_LIT_STRING .

    $padrão  reduzir usando a regra 15 (literal)


State 33

   30 valor: TK_IDENTIFICADOR .
   31      | TK_IDENTIFICADOR . '[' expressao ']'

    '['  deslocar, e ir ao estado 47

    $padrão  reduzir usando a regra 30 (valor)


State 34

   29 valor: literal .

    $padrão  reduzir usando a regra 29 (valor)


State 35

    5 declaracao_global: especificador_tipo TK_IDENTIFICADOR '[' valor . ']' ';'

    ']'  deslocar, e ir ao estado 48


State 36

   60 lista_parametros: especificador_tipo . TK_IDENTIFICADOR

    TK_IDENTIFICADOR  deslocar, e ir ao estado 49


State 37

   62 lista_parametros: valor .

    $padrão  reduzir usando a regra 62 (lista_parametros)


State 38

   61 lista_parametros: qualificador_tipo . especificador_tipo TK_IDENTIFICADOR

    TK_PR_INT     deslocar, e ir ao estado 1
    TK_PR_FLOAT   deslocar, e ir ao estado 2
    TK_PR_BOOL    deslocar, e ir ao estado 3
    TK_PR_CHAR    deslocar, e ir ao estado 4
    TK_PR_STRING  deslocar, e ir ao estado 5

    especificador_tipo  ir ao estado 50


State 39

   73 declarar_funcao: especificador_tipo TK_IDENTIFICADOR '(' parametros_vazio . ')' '{' bloco_comando '}'

    ')'  deslocar, e ir ao estado 51


State 40

   56 parametros_vazio: parametros .

    $padrão  reduzir usando a regra 56 (parametros_vazio)


State 41

   58 parametros: lista_parametros . ',' parametros
   59           | lista_parametros .

    ','  deslocar, e ir ao estado 52

    $padrão  reduzir usando a regra 59 (parametros)


State 42

    7 declaracao_global: especificador_classe_armazenamento especificador_tipo TK_IDENTIFICADOR ';' .

    $padrão  reduzir usando a regra 7 (declaracao_global)


State 43

    8 declaracao_global: especificador_classe_armazenamento especificador_tipo TK_IDENTIFICADOR '[' . valor ']' ';'

    TK_LIT_INT        deslocar, e ir ao estado 27
    TK_LIT_FLOAT      deslocar, e ir ao estado 28
    TK_LIT_FALSE      deslocar, e ir ao estado 29
    TK_LIT_TRUE       deslocar, e ir ao estado 30
    TK_LIT_CHAR       deslocar, e ir ao estado 31
    TK_LIT_STRING     deslocar, e ir ao estado 32
    TK_IDENTIFICADOR  deslocar, e ir ao estado 33

    literal  ir ao estado 34
    valor    ir ao estado 53


State 44

   74 declarar_funcao: especificador_classe_armazenamento especificador_tipo TK_IDENTIFICADOR '(' . parametros_vazio ')' '{' bloco_comando '}'

    TK_PR_INT         deslocar, e ir ao estado 1
    TK_PR_FLOAT       deslocar, e ir ao estado 2
    TK_PR_BOOL        deslocar, e ir ao estado 3
    TK_PR_CHAR        deslocar, e ir ao estado 4
    TK_PR_STRING      deslocar, e ir ao estado 5
    TK_PR_CONST       deslocar, e ir ao estado 7
    TK_LIT_INT        deslocar, e ir ao estado 27
    TK_LIT_FLOAT      deslocar, e ir ao estado 28
    TK_LIT_FALSE      deslocar, e ir ao estado 29
    TK_LIT_TRUE       deslocar, e ir ao estado 30
    TK_LIT_CHAR       deslocar, e ir ao estado 31
    TK_LIT_STRING     deslocar, e ir ao estado 32
    TK_IDENTIFICADOR  deslocar, e ir ao estado 33

    $padrão  reduzir usando a regra 57 (parametros_vazio)

    literal             ir ao estado 34
    especificador_tipo  ir ao estado 36
    valor               ir ao estado 37
    qualificador_tipo   ir ao estado 38
    parametros_vazio    ir ao estado 54
    parametros          ir ao estado 40
    lista_parametros    ir ao estado 41


State 45

    9 declaracao_global: especificador_classe_armazenamento qualificador_tipo especificador_tipo TK_IDENTIFICADOR . ';'

    ';'  deslocar, e ir ao estado 55


State 46

    6 declaracao_global: qualificador_tipo especificador_tipo TK_IDENTIFICADOR ';' .

    $padrão  reduzir usando a regra 6 (declaracao_global)


State 47

   31 valor: TK_IDENTIFICADOR '[' . expressao ']'

    TK_OC_LE          deslocar, e ir ao estado 56
    TK_OC_GE          deslocar, e ir ao estado 57
    TK_OC_EQ          deslocar, e ir ao estado 58
    TK_OC_NE          deslocar, e ir ao estado 59
    TK_OC_AND         deslocar, e ir ao estado 60
    TK_OC_OR          deslocar, e ir ao estado 61
    TK_LIT_INT        deslocar, e ir ao estado 27
    TK_LIT_FLOAT      deslocar, e ir ao estado 28
    TK_LIT_FALSE      deslocar, e ir ao estado 29
    TK_LIT_TRUE       deslocar, e ir ao estado 30
    TK_LIT_CHAR       deslocar, e ir ao estado 31
    TK_LIT_STRING     deslocar, e ir ao estado 32
    TK_IDENTIFICADOR  deslocar, e ir ao estado 62
    '('               deslocar, e ir ao estado 63
    '+'               deslocar, e ir ao estado 64
    '-'               deslocar, e ir ao estado 65
    '*'               deslocar, e ir ao estado 66
    '/'               deslocar, e ir ao estado 67
    '%'               deslocar, e ir ao estado 68
    '<'               deslocar, e ir ao estado 69
    '>'               deslocar, e ir ao estado 70

    literal              ir ao estado 34
    valor                ir ao estado 71
    operador_aritmetico  ir ao estado 72
    operador_logico      ir ao estado 73
    expressao            ir ao estado 74
    expressao_de_funcao  ir ao estado 75


State 48

    5 declaracao_global: especificador_tipo TK_IDENTIFICADOR '[' valor ']' . ';'

    ';'  deslocar, e ir ao estado 76


State 49

   60 lista_parametros: especificador_tipo TK_IDENTIFICADOR .

    $padrão  reduzir usando a regra 60 (lista_parametros)


State 50

   61 lista_parametros: qualificador_tipo especificador_tipo . TK_IDENTIFICADOR

    TK_IDENTIFICADOR  deslocar, e ir ao estado 77


State 51

   73 declarar_funcao: especificador_tipo TK_IDENTIFICADOR '(' parametros_vazio ')' . '{' bloco_comando '}'

    '{'  deslocar, e ir ao estado 78


State 52

   58 parametros: lista_parametros ',' . parametros

    TK_PR_INT         deslocar, e ir ao estado 1
    TK_PR_FLOAT       deslocar, e ir ao estado 2
    TK_PR_BOOL        deslocar, e ir ao estado 3
    TK_PR_CHAR        deslocar, e ir ao estado 4
    TK_PR_STRING      deslocar, e ir ao estado 5
    TK_PR_CONST       deslocar, e ir ao estado 7
    TK_LIT_INT        deslocar, e ir ao estado 27
    TK_LIT_FLOAT      deslocar, e ir ao estado 28
    TK_LIT_FALSE      deslocar, e ir ao estado 29
    TK_LIT_TRUE       deslocar, e ir ao estado 30
    TK_LIT_CHAR       deslocar, e ir ao estado 31
    TK_LIT_STRING     deslocar, e ir ao estado 32
    TK_IDENTIFICADOR  deslocar, e ir ao estado 33

    literal             ir ao estado 34
    especificador_tipo  ir ao estado 36
    valor               ir ao estado 37
    qualificador_tipo   ir ao estado 38
    parametros          ir ao estado 79
    lista_parametros    ir ao estado 41


State 53

    8 declaracao_global: especificador_classe_armazenamento especificador_tipo TK_IDENTIFICADOR '[' valor . ']' ';'

    ']'  deslocar, e ir ao estado 80


State 54

   74 declarar_funcao: especificador_classe_armazenamento especificador_tipo TK_IDENTIFICADOR '(' parametros_vazio . ')' '{' bloco_comando '}'

    ')'  deslocar, e ir ao estado 81


State 55

    9 declaracao_global: especificador_classe_armazenamento qualificador_tipo especificador_tipo TK_IDENTIFICADOR ';' .

    $padrão  reduzir usando a regra 9 (declaracao_global)


State 56

   83 operador_logico: TK_OC_LE .

    $padrão  reduzir usando a regra 83 (operador_logico)


State 57

   84 operador_logico: TK_OC_GE .

    $padrão  reduzir usando a regra 84 (operador_logico)


State 58

   85 operador_logico: TK_OC_EQ .

    $padrão  reduzir usando a regra 85 (operador_logico)


State 59

   86 operador_logico: TK_OC_NE .

    $padrão  reduzir usando a regra 86 (operador_logico)


State 60

   87 operador_logico: TK_OC_AND .

    $padrão  reduzir usando a regra 87 (operador_logico)


State 61

   88 operador_logico: TK_OC_OR .

    $padrão  reduzir usando a regra 88 (operador_logico)


State 62

   30 valor: TK_IDENTIFICADOR .
   31      | TK_IDENTIFICADOR . '[' expressao ']'
   97 expressao_de_funcao: TK_IDENTIFICADOR . '(' lista_vazia ')' lista_vazia

    '['  deslocar, e ir ao estado 47
    '('  deslocar, e ir ao estado 82

    '('       [reduzir usando a regra 30 (valor)]
    $padrão  reduzir usando a regra 30 (valor)


State 63

   94 expressao: '(' . expressao ')'

    TK_OC_LE          deslocar, e ir ao estado 56
    TK_OC_GE          deslocar, e ir ao estado 57
    TK_OC_EQ          deslocar, e ir ao estado 58
    TK_OC_NE          deslocar, e ir ao estado 59
    TK_OC_AND         deslocar, e ir ao estado 60
    TK_OC_OR          deslocar, e ir ao estado 61
    TK_LIT_INT        deslocar, e ir ao estado 27
    TK_LIT_FLOAT      deslocar, e ir ao estado 28
    TK_LIT_FALSE      deslocar, e ir ao estado 29
    TK_LIT_TRUE       deslocar, e ir ao estado 30
    TK_LIT_CHAR       deslocar, e ir ao estado 31
    TK_LIT_STRING     deslocar, e ir ao estado 32
    TK_IDENTIFICADOR  deslocar, e ir ao estado 62
    '('               deslocar, e ir ao estado 63
    '+'               deslocar, e ir ao estado 64
    '-'               deslocar, e ir ao estado 65
    '*'               deslocar, e ir ao estado 66
    '/'               deslocar, e ir ao estado 67
    '%'               deslocar, e ir ao estado 68
    '<'               deslocar, e ir ao estado 69
    '>'               deslocar, e ir ao estado 70

    literal              ir ao estado 34
    valor                ir ao estado 71
    operador_aritmetico  ir ao estado 72
    operador_logico      ir ao estado 73
    expressao            ir ao estado 83
    expressao_de_funcao  ir ao estado 75


State 64

   78 operador_aritmetico: '+' .

    $padrão  reduzir usando a regra 78 (operador_aritmetico)


State 65

   79 operador_aritmetico: '-' .

    $padrão  reduzir usando a regra 79 (operador_aritmetico)


State 66

   80 operador_aritmetico: '*' .

    $padrão  reduzir usando a regra 80 (operador_aritmetico)


State 67

   81 operador_aritmetico: '/' .

    $padrão  reduzir usando a regra 81 (operador_aritmetico)


State 68

   82 operador_aritmetico: '%' .

    $padrão  reduzir usando a regra 82 (operador_aritmetico)


State 69

   89 operador_logico: '<' .

    $padrão  reduzir usando a regra 89 (operador_logico)


State 70

   90 operador_logico: '>' .

    $padrão  reduzir usando a regra 90 (operador_logico)


State 71

   92 expressao: valor . expressao
   96          | valor .

    TK_OC_LE          deslocar, e ir ao estado 56
    TK_OC_GE          deslocar, e ir ao estado 57
    TK_OC_EQ          deslocar, e ir ao estado 58
    TK_OC_NE          deslocar, e ir ao estado 59
    TK_OC_AND         deslocar, e ir ao estado 60
    TK_OC_OR          deslocar, e ir ao estado 61
    TK_LIT_INT        deslocar, e ir ao estado 27
    TK_LIT_FLOAT      deslocar, e ir ao estado 28
    TK_LIT_FALSE      deslocar, e ir ao estado 29
    TK_LIT_TRUE       deslocar, e ir ao estado 30
    TK_LIT_CHAR       deslocar, e ir ao estado 31
    TK_LIT_STRING     deslocar, e ir ao estado 32
    TK_IDENTIFICADOR  deslocar, e ir ao estado 62
    '('               deslocar, e ir ao estado 63
    '+'               deslocar, e ir ao estado 64
    '-'               deslocar, e ir ao estado 65
    '*'               deslocar, e ir ao estado 66
    '/'               deslocar, e ir ao estado 67
    '%'               deslocar, e ir ao estado 68
    '<'               deslocar, e ir ao estado 69
    '>'               deslocar, e ir ao estado 70

    $padrão  reduzir usando a regra 96 (expressao)

    literal              ir ao estado 34
    valor                ir ao estado 71
    operador_aritmetico  ir ao estado 72
    operador_logico      ir ao estado 73
    expressao            ir ao estado 84
    expressao_de_funcao  ir ao estado 75


State 72

   93 expressao: operador_aritmetico . expressao

    TK_OC_LE          deslocar, e ir ao estado 56
    TK_OC_GE          deslocar, e ir ao estado 57
    TK_OC_EQ          deslocar, e ir ao estado 58
    TK_OC_NE          deslocar, e ir ao estado 59
    TK_OC_AND         deslocar, e ir ao estado 60
    TK_OC_OR          deslocar, e ir ao estado 61
    TK_LIT_INT        deslocar, e ir ao estado 27
    TK_LIT_FLOAT      deslocar, e ir ao estado 28
    TK_LIT_FALSE      deslocar, e ir ao estado 29
    TK_LIT_TRUE       deslocar, e ir ao estado 30
    TK_LIT_CHAR       deslocar, e ir ao estado 31
    TK_LIT_STRING     deslocar, e ir ao estado 32
    TK_IDENTIFICADOR  deslocar, e ir ao estado 62
    '('               deslocar, e ir ao estado 63
    '+'               deslocar, e ir ao estado 64
    '-'               deslocar, e ir ao estado 65
    '*'               deslocar, e ir ao estado 66
    '/'               deslocar, e ir ao estado 67
    '%'               deslocar, e ir ao estado 68
    '<'               deslocar, e ir ao estado 69
    '>'               deslocar, e ir ao estado 70

    literal              ir ao estado 34
    valor                ir ao estado 71
    operador_aritmetico  ir ao estado 72
    operador_logico      ir ao estado 73
    expressao            ir ao estado 85
    expressao_de_funcao  ir ao estado 75


State 73

   91 expressao: operador_logico . expressao
